--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,11 @@
 {
-  // Name this Configuration
-  "name" : "Codespace for Skills!",
-  "custmications" : {
-    "vscode": {
-      "extensions": [
-        "GitHub.copilot"
-        ]
-      }
+    // Name this configuration
+    "name": "Codespace for Skills!",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "GitHub.copilot"
+            ]
+        }
     }
- }
+}
